# mano

./: CMakeLists.txt  install.sh  main.cpp
src/: Application.cpp  Application.h  Console.cpp  Console.h  Editor.h  GapBuffer.cpp  GapBuffer.h  LineArray.cpp  LineArray.h  Memory.h
